--- a/src/styles/stylesheet.css
+++ b/src/styles/stylesheet.css
@@ -84,6 +84,15 @@ body {
         font-size: 1.2rem;
     }
 
+    .social-button img {
+        margin-right: 5px;
+        filter: brightness(0) saturate(100%) invert(75%) sepia(100%) saturate(5000%) hue-rotate(90deg) brightness(100%) contrast(100%);
+    }
+
+    .social-button:hover img {
+        filter: brightness(0) saturate(100%) invert(100%) sepia(0%) saturate(0%) hue-rotate(0deg) brightness(0%) contrast(100%);
+    }
+
     .social-button:hover {
         opacity: 0.8;
         background-color: #00ff00;
